--- a/.github/workflows/scan-pull-request.yml
+++ b/.github/workflows/scan-pull-request.yml
@@ -17,7 +17,7 @@ jobs:
           JFROG_CLI_LOG_LEVEL: DEBUG
           # [Mandatory]
           # JFrog platform URL
-          JF_URL: ${{ vars.JF_URL }}
+          JF_URL: ${{ vars.JFROG_URL }}
 
           # [Mandatory if JF_USER and JF_PASSWORD are not provided]
           # JFrog access token with 'read' permissions on Xray service
