--- a/.github/workflows/scan-pull-request.yml
+++ b/.github/workflows/scan-pull-request.yml
@@ -12,7 +12,7 @@ jobs:
     # "frogbot" GitHub environment can approve the pull request to be scanned.
     environment: frogbot
     steps:
-      - uses: jfrog/frogbot@v2
+      - uses: carmithersh/frogbot@master
         env:
           JFROG_CLI_LOG_LEVEL: DEBUG
           # [Mandatory]
