--- a/.github/workflows/scan-pull-request.yml
+++ b/.github/workflows/scan-pull-request.yml
@@ -5,6 +5,7 @@ on:
 permissions:
   pull-requests: write
   contents: read
+  id-token: write
 jobs:
   scan-pull-request:
     runs-on: ubuntu-latest
