--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -4,8 +4,10 @@ on:
         branches:
 
 permissions:
+  actions: read # for detecting the Github Actions environment.
+  id-token: write # for creating OIDC tokens for signing.
+  packages: write # for uploading attestations.
   contents: read
-  id-token: write
 jobs:
     build-publish-python:
         
