--- a/.github/workflows/scan-pull-request.yml
+++ b/.github/workflows/scan-pull-request.yml
@@ -14,6 +14,8 @@ jobs:
     environment: frogbot
     steps:
       - uses: carmithersh/frogbot@master
+        with:
+          oidc-provider-name: github-carmit-project-1      
         env:
           JFROG_CLI_LOG_LEVEL: DEBUG
           # [Mandatory]
@@ -23,7 +25,6 @@ jobs:
           # [Mandatory if JF_USER and JF_PASSWORD are not provided]
           # JFrog access token with 'read' permissions on Xray service
           JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
-          OIDC_PROVIDER_NAME: github-carmit-project-1
           # [Mandatory if JF_ACCESS_TOKEN is not provided]
           # JFrog username with 'read' permissions for Xray. Must be provided with JF_PASSWORD
           # JF_USER: ${{ secrets.JF_USER }}
