--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -56,13 +56,15 @@ jobs:
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3    
                 
-            - name: Authenticate Docker
-              uses: docker/login-action@v3
-              with:
-                registry: ${{ vars.JF_URL }}
-                username: ${{ vars.JF_DOCKER_USER }} 
-                password: ${{ secrets.JF_DOCKER_TOKEN }} 
-    
+            #- name: Authenticate Docker
+            #  uses: docker/login-action@v3
+            # # with:
+            #    registry: ${{ vars.JF_URL }}
+             #   username: ${{ vars.JF_DOCKER_USER }} 
+              #  password: ${{ secrets.JF_DOCKER_TOKEN }} 
+            - name: docker scan
+              run: |  
+                 jf docker login 
                 
             - name: Build Docker image    
               uses: docker/build-push-action@v5
