--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -55,12 +55,13 @@ jobs:
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3    
                 
-            #- name: Authenticate Docker
-            #  uses: docker/login-action@v3
-            # # with:
-            #    registry: ${{ secrets.JF_URL }}
-             #   username: ${{ vars.JF_DOCKER_USER }} 
-              #  password: ${{ secrets.JF_DOCKER_TOKEN }} 
+            - name: Authenticate Docker
+              uses: docker/login-action@v3
+              with:
+                registry: ${{ secrets.JF_URL }}
+                username: ${{ vars.JF_DOCKER_USER }} 
+                password: ${{ secrets.JF_DOCKER_TOKEN }} 
+            
             - name: docker login
               run: |  
                  jf docker login ${{ secrets.JF_URL }}/${{ env.DOCKER_REPO }}
