--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -14,18 +14,14 @@ jobs:
         env:
           DOCKER_REPO: 'docler-local3'
           IMAGE_NAME: 'carmit-testing:6'
-          BUILD_NUMBER: 4
-          BUILD_NAME: my-testing-build
-          PLATFORM_URL: https://${{ vars.JF_URL }}/
-          
-          JFROG_CLI_BUILD_PROJECT: carmit-prj-1
+          JFROG_CLI_BUILD_PROJECT: carmit-prj-1         
         outputs:
-          image: "${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}"
+          image: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
           digest: ${{ steps.build.outputs.digest }}
         steps:
             - name: Checkout the repository    
               uses: actions/checkout@v4
-               # Setup Go
+            # Setup Go
             - name: Setup Go
               uses: actions/setup-go@v5
               with:
@@ -38,6 +34,7 @@ jobs:
               with:
                 repository: "eyaldelarea/jfrog-cli"
                 ref: "github_job_summary"
+                
             - name: Build current CLI
               run: go build .
 
@@ -45,7 +42,7 @@ jobs:
             - uses: eyaldelarea/setup-jfrog-cli@cleanUpSummaries    
               name: Setup JFrog CLI
               env: 
-                JF_URL: ${{ env.PLATFORM_URL }}
+                JF_URL: https://${{ vars.JF_URL }}/
               with:
                   oidc-provider-name: github-carmit-project-1
 
