--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -58,7 +58,9 @@ jobs:
                 echo $VIRTUAL_ENV
                 
             - name: build project
-              run: |                               
+              run: |      
+                pwd
+                ls -ltr 
                 ./jfrog-cli pip install -r requirements.txt  --module=jfrog-python-example
                 python setup.py sdist bdist_wheel
                 cd dist && echo "hashes=$(sha256sum * | base64 -w0)" >> $GITHUB_OUTPUT
