--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -46,8 +46,7 @@ jobs:
                   
             - name: check filesystem 1
               run: |      
-                pwd
-                ls -ltr 
+                mv  ./jfrog-cli /tmp/
                 
             - name: Checkout the repository    
               uses: actions/checkout@v4
@@ -56,9 +55,10 @@ jobs:
               run: |      
                 pwd
                 ls -ltr   
+                ls -ltr /tmp/
             - name: configure jfrog environment
               run: |
-                ./jfrog-cli pip-config --repo-resolve=python-virtual    
+                /tmp/jfrog-cli pip-config --repo-resolve=python-virtual    
                 
             - name: configure environment
               run: |                      
@@ -69,13 +69,13 @@ jobs:
                 
             - name: build project
               run: |                      
-                ./jfrog-cli pip install -r requirements.txt  --module=jfrog-python-example
+                /tmp/jfrog-cli pip install -r requirements.txt  --module=jfrog-python-example
                 python setup.py sdist bdist_wheel
                 cd dist && echo "hashes=$(sha256sum * | base64 -w0)" >> $GITHUB_OUTPUT
 
             - name: publish python package
               run: |
-                ./jfrog-cli rt u dist/ python-virtual/example-projects/ --module=jfrog-python-example
+                /tmp/jfrog-cli rt u dist/ python-virtual/example-projects/ --module=jfrog-python-example
 
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3    
@@ -98,19 +98,19 @@ jobs:
                         
             - name: docker scan
               run: |  
-                 ./jfrog-cli docker pull ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-                 ./jfrog-cli docker scan ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}                               
+                 /tmp/jfrog-cli docker pull ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
+                 /tmp/jfrog-cli docker scan ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}                               
 
             - name: add docker package to build
               run: |  
                  echo "${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}" > metadata.json
-                 ./jfrog-cli rt build-docker-create ${{ env.DOCKER_REPO }} --image-file metadata.json 
+                 /tmp/jfrog-cli rt build-docker-create ${{ env.DOCKER_REPO }} --image-file metadata.json 
                  
             - name: publish build info
               run: |
-                ./jfrog-cli rt bce 
-                ./jfrog-cli rt bp
-                ./jfrog-cli build-scan  --format sarif --fail=false
+                /tmp/jfrog-cli rt bce 
+                /tmp/jfrog-cli rt bp
+                /tmp/jfrog-cli build-scan  --format sarif --fail=false
             
     provenance:
       needs: [build-publish-python]
