--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -31,7 +31,7 @@ jobs:
               uses: actions/checkout@v4
               with:
                 repository: "eyaldelarea/jfrog-cli"
-                ref: "github_job_summary"
+                ref: "job_summaries"
                 
             - name: Build current CLI
               run: go build .
