--- a/.github/workflows/scan-pull-request.yml
+++ b/.github/workflows/scan-pull-request.yml
@@ -13,7 +13,7 @@ jobs:
     # "frogbot" GitHub environment can approve the pull request to be scanned.
     environment: frogbot
     steps:
-      - uses: carmithersh/frogbot@master
+      - uses: jfrog/frogbot@v2
         with:
           oidc-provider-name: github-carmit-project-1      
         env:
