--- a/.github/workflows/build-publish-v3.yml
+++ b/.github/workflows/build-publish-v3.yml
@@ -28,6 +28,11 @@ jobs:
               with:
                   oidc-provider-name: github-carmit-project-1
 
+            - name: check outputs
+              run: |
+                echo "jf_oidc_token=${{ steps.setup-cli.outputs.jf_oidc_token }}"
+                echo "jf_oidc_user=${{ steps.setup-cli.outputs.jf_oidc_user }}"
+
             - name: configure jfrog environment
               run: |
                 jf pip-config --repo-resolve=python-virtual 
@@ -36,5 +41,3 @@ jobs:
                 pip show setuptools
                 echo $VIRTUAL_ENV
                 jf pip install -r requirements.txt --module=jfrog-python-example
-                echo "jf_oidc_token=${{ steps.setup-cli.outputs.jf_oidc_token }}"
-                echo "jf_oidc_user=${{ steps.setup-cli.outputs.jf_oidc_user }}"
