--- a/.github/workflows/build-publish-v3.yml
+++ b/.github/workflows/build-publish-v3.yml
@@ -16,6 +16,8 @@ jobs:
         outputs:
           image: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
           digest: ${{ steps.build.outputs.digest }}
+          jf_oidc_user: ${{ steps.setup-cli.outputs.jf_oidc_user }}
+          jf_oidc_token: ${{ steps.setup-cli.outputs.jf_oidc_token }}
         steps:
             - name: Checkout the repository    
               uses: actions/checkout@v4
@@ -33,4 +35,72 @@ jobs:
                 echo "jf_oidc_token=${{ steps.setup-cli.outputs.jf_oidc_token }}"
                 echo "jf_oidc_user=${{ steps.setup-cli.outputs.jf_oidc_user }}"
 
-       
+            - name: configure jfrog environment
+              run: |
+                jf pip-config --repo-resolve=python-virtual    
+                
+            - name: configure environment
+              run: |                      
+                python3 -m pip install --upgrade pip setuptools wheel sigstore
+                wheel -h
+                pip show setuptools
+                echo $VIRTUAL_ENV
+                
+            - name: build project
+              run: |                               
+                jf pip install -r requirements.txt --module=jfrog-python-example
+                python setup.py sdist bdist_wheel
+                cd dist && echo "hashes=$(sha256sum * | base64 -w0)" >> $GITHUB_OUTPUT
+
+            - name: publish python package
+              run: |
+                jf rt u dist/ python-virtual/example-projects/ --module=jfrog-python-example 
+
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3    
+                
+            - name: Authenticate Docker
+              uses: docker/login-action@v3
+              with:
+                registry: ${{ vars.JF_URL }}
+                username: ${{ steps.setup-cli.outputs.jf_oidc_user }} 
+                password: ${{ steps.setup-cli.outputs.jf_oidc_token }}
+            
+            #- name: docker login
+            #  run: |  
+            #     jf docker login ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}
+                
+            - name: Build Docker image    
+              uses: docker/build-push-action@v5
+              id: build
+              with:
+                push: true
+                platforms: linux/amd64, linux/arm64
+                tags: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}          
+                        
+            - name: docker scan
+              run: |  
+                 jf docker pull ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
+                 jf docker scan ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}                               
+
+            - name: add docker package to build
+              run: |  
+                 echo "${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}" > metadata.json
+                 jf rt build-docker-create ${{ env.DOCKER_REPO }} --image-file metadata.json 
+                 
+            - name: publish build info
+              run: |
+                jf rt bce 
+                jf rt bp 
+                jf build-scan  --format sarif --fail=false 
+            
+    provenance:
+      needs: [build-publish]
+      uses: slsa-framework/slsa-github-generator/.github/workflows/generator_container_slsa3.yml@v1.10.0
+      with:
+        image:  ${{ needs.build-publish.outputs.image }}
+        digest: ${{ needs.build-publish.outputs.digest }}
+        private-repository: true
+      secrets:
+        registry-username: ${{ needs.build-publish.outputs.jf_oidc_user }}
+        registry-password: ${{ needs.build-publish.outputs.jf_oidc_token }}
