--- a/.github/workflows/build-publish-v3.yml
+++ b/.github/workflows/build-publish-v3.yml
@@ -17,7 +17,7 @@ jobs:
           image: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
           digest: ${{ steps.build.outputs.digest }}
           user: ${{ steps.setup-cli.outputs.jf_oidc_user }}
-          pass: ${{ steps.setup-cli.outputs.jf_oidc_usert }}
+          pass: ${{ steps.setup-cli.outputs.jf_oidc_token }}
         steps:
             - name: Checkout the repository    
               uses: actions/checkout@v4
@@ -30,10 +30,10 @@ jobs:
               with:
                   oidc-provider-name: github-carmit-project-1
 
-            - name: check outputs
-              run: |
-                echo "jf_oidc_token=${{ steps.setup-cli.outputs.jf_oidc_token }}"
-                echo "jf_oidc_user=${{ steps.setup-cli.outputs.jf_oidc_token }}"
+            #- name: check outputs
+            #  run: |
+            #    echo "jf_oidc_token=${{ steps.setup-cli.outputs.jf_oidc_token }}"
+            #    echo "jf_oidc_user=${{ steps.setup-cli.outputs.jf_oidc_token }}"
 
             - name: configure jfrog environment
               run: |
@@ -89,17 +89,7 @@ jobs:
                 jf rt bce 
                 jf rt bp 
                 jf build-scan  --format sarif --fail=false 
-    provenance:
-      needs: [build-publish]
-      uses: slsa-framework/slsa-github-generator/.github/workflows/generator_container_slsa3.yml@v1.10.0
-      with:
-        image:  ${{ needs.build-publish.outputs.image }}
-        digest: ${{ needs.build-publish.outputs.digest }}
-        private-repository: true
-      secrets:       
-        registry-username: ${{ needs.build-publish.outputs.user }} 
-        registry-password: ${{ needs.build-publish.outputs.pass }} 
-            
+   
 
            
       
