--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -14,7 +14,8 @@ jobs:
         env:
           DOCKER_REPO: 'testing-docker-local'
           IMAGE_NAME: 'carmit-testing:6'
-          JF_PROJECT: carmit-prj-1         
+          JF_PROJECT: carmit-prj-1     
+          JF_URL: https://${{ vars.JF_URL }}/
         outputs:
           image: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
           digest: ${{ steps.build.outputs.digest }}
