--- a/.github/workflows/build-publish-v3.yml
+++ b/.github/workflows/build-publish-v3.yml
@@ -30,8 +30,8 @@ jobs:
 
             #- name: check outputs
             #  run: |
-            #    echo "jf_oidc_token=${{ steps.setup-cli.outputs.jf_oidc_token }}"
-            #    echo "jf_oidc_user=${{ steps.setup-cli.outputs.jf_oidc_token }}"
+            #    echo "jf-oidc-token=${{ steps.setup-cli.outputs.jf-oidc-token }}"
+            #    echo "jf-oidc-user=${{ steps.setup-cli.outputs.jf-oidc-token }}"
 
             - name: configure jfrog environment
               run: |
@@ -61,8 +61,8 @@ jobs:
               uses: docker/login-action@v3
               with:
                 registry: ${{ vars.JF_URL }}
-                username: ${{ steps.setup-cli.outputs.jf_oidc_user }} 
-                password: ${{ steps.setup-cli.outputs.jf_oidc_token }}
+                username: ${{ steps.setup-cli.outputs.jf-oidc-user }} 
+                password: ${{ steps.setup-cli.outputs.jf-oidc-token }}
                 
             - name: Build Docker image    
               uses: docker/build-push-action@v5
