--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -19,6 +19,8 @@ jobs:
         outputs:
           image: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
           digest: ${{ steps.build.outputs.digest }}
+          user: ${{ steps.setup-cli.outputs.oidc-user }} 
+          token: ${{ steps.setup-cli.outputs.oidc-token }} 
         steps:
             # Setup Go
             - name: Setup Go
