--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -57,8 +57,8 @@ jobs:
               uses: docker/login-action@v3
               with:
                 registry: ${{ vars.JF_URL }}
-                username: ${{ vars.JF_DOCKER_USER }} 
-                password: ${{ secrets.JF_DOCKER_TOKEN }} 
+                username: ${{ steps.setup-cli.outputs.oidc-user }} 
+                password: ${{ steps.setup-cli.outputs.oidc-token }}
              
             - name: Build Docker image    
               uses: docker/build-push-action@v5
