--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -92,8 +92,24 @@ jobs:
               with:
                 push: true
                 platforms: linux/amd64 #, linux/arm64
-                tags: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}     
+                tags: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }} 
                 
+            - name: Add text to summary
+              uses: actions/github-script@v6
+              with:
+               script: |
+                  const {github, context} = require('@actions/github');
+                  const textToAdd = '### Summary\n\nThis is the text added to the summary.\n\n- Item 1\n- Item 2\n';
+
+                  await github.rest.checks.update({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    check_run_id: context.runId,
+                    output: {
+                      title: 'Workflow Summary',
+                      summary: textToAdd
+                    }
+                  }); 
                         
             - name: docker scan
               run: |  
