--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -20,21 +20,10 @@ jobs:
           image: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
           digest: ${{ steps.build.outputs.digest }}
         steps:
-            - name: Add text to summary
-              uses: actions/github-script@v6
-              with:
-               script: |
-                  const textToAdd = '### Summary\n\nThis is the text added to the summary.\n\n- Item 1\n- Item 2\n';
-
-                  await github.rest.checks.update({
-                    owner: context.repo.owner,
-                    repo: context.repo.repo,
-                    check_run_id: context.runId,
-                    output: {
-                      title: 'Workflow Summary',
-                      summary: textToAdd
-                    }
-                  }); 
+        - name: Write to workflow job summary
+          run: |
+            SUMMARY=$'[!TIP]\nHello JFrog \n [!CAUTION] \nFound Vulnerabilities'
+            echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
             # Setup Go
             - name: Setup Go
               uses: actions/setup-go@v5
