--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -13,7 +13,7 @@ jobs:
           DOCKER_REPO: 'testing-docker-local'
           IMAGE_NAME: 'carmit-testing:6'
           JF_PROJECT: carmit-prj-1     
-          JF_URL: https://${{ vars.JF_URL }}/         
+          JF_URL: https://${{ vars.JF_URL }}         
         outputs:
           image: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
           digest: ${{ steps.build.outputs.digest }}
